# 404-gen-subnet

./: .gitignore  NOTICE.md  README.md  package-lock.json
.github/workflows/: docker-build.yml
Competitions/: competition0.md  competition1.md  competition2.md
duel-eval/: .gitignore
duel-eval/render-env/: setup_env.sh
duel-eval/scripts/: render_2x2_grid.py
generation-orchestrator/: README.md  main.py  pyproject.toml
generation-orchestrator/generation_orchestrator/: build_tracker.py  discord.py  failure_tracker.py  generate.py  generation_iteration.py  generation_pipeline.py  generation_stop.py  generation_summary.py  hardware.py  image_distance.py  miner_audit.py  miner_process.py  miner_runner.py  pod_client.py  pod_session.py  pod_tracker.py  prompt_coordinator.py  prompt_queue.py  prompts.py  render.py  settings.py  staggered_semaphore.py  targon.py  targon_client.py
generation-orchestrator/generation_orchestrator/gpu_provider/: __init__.py  common.py  runpod_client.py  targon_client.py  verda_client.py
generation-orchestrator/scripts/: deploy_pod.py
generation-orchestrator/tests/: conftest.py  test_build_tracker.py  test_generation_iteration.py  test_generation_pipeline.py  test_generation_stop.py  test_generation_summary.py  test_hardware.py  test_image_distance.py  test_miner_audit.py  test_miner_runner.py  test_pod_client.py  test_pod_config.py  test_pod_session.py  test_pod_tracker.py  test_prompt_coordinator.py  test_runpod_cuda_payload.py  test_staggered_semaphore.py
image-distance-service/: README.md  example.env  main.py  pyproject.toml
image-distance-service/image_distance_service/: distance.py  service.py  settings.py
judge-service/: README.md  main.py  pyproject.toml
judge-service/judge_service/: audit_execution.py  challenge.py  discord.py  evaluate_duel.py  judge_iteration.py  match_execution.py  match_report.py  match_runner.py  models.py  round_runner.py  settings.py  timeline.py
judge-service/judge_service/judges/: multi_stage.py
judge-service/tests/: conftest.py  test_audit_execution.py  test_evaluate_duel.py  test_judge_iteration.py  test_match_execution.py  test_match_runner.py  test_match_runner.py.tobedone  test_round_runner.py  test_round_runner.py.tobedone  test_round_runner_scenario.py  test_timeline.py
miner-reference/: .dockerignore  AGENTS.md  Dockerfile  README.md  api_specification.md  main.py  output_specifications.md  pyproject.toml  runtime_specifications.md
miner-reference/examples/: car.js  custom_buffergeometry.js  instanced_mesh.js  line_segments.js  material_variants.js  points_cloud.js  viewer.html
miner-reference/miner_reference/: gpu_benchmark.py  service.py  threejs_placeholder.py  vram.py
miner-reference/tests/: test_service.py
miner-reference/tools/: validate.js
miner-reference/validator/: README.md  package.json
miner-reference/validator/src/: execute.js  index.js  parse.js  postValidation.js  staticAnalysis.js  threeAllowlist.js  worker-runner.mjs
miner-reference/validator/test/: run-budget-probes.js  run-negative-probes.js
miner-reference/validator/test/budget-probes/: cathedral.js  detailed_car.js  highpoly_statue.js  leafy_tree.js  wooden_chair.js
miner-reference/validator/test/negative-probes/: texture_data_exceeded.js
render-service/: Dockerfile  README.md  constants.py  render.py  render_service.py  requirements.txt  splats_render_2x2_grid.py
render-service-js/: Dockerfile  README.md  package-lock.json  package.json
render-service-js/src/: browser.js  post-validate.js  render-page.html  render-pool.js  renderer.js  safeThree.js  server.js  validation-pool.js  validation-worker.js
render-service-js/src/validator/: index.js  staticAnalysis.js  threeAllowlist.js
render-service-js/test/: adversary.test.mjs  endpoint.test.mjs  post-validate.test.mjs  runtime-adversary.test.mjs  validator.test.mjs
render-service/renderers/mesh_renderer/: renderer.py
round-manager/: README.md  main.py  pyproject.toml
round-manager/round_manager/: discord.py  finalize_round.py  manage_round_iteration.py  settings.py
round-manager/tests/: conftest.py  test_finalize_round.py  test_manager.py
shared/: pyproject.toml
shared/subnet_common/: discord.py  embeddings.py  git_batcher.py  github.py  graceful_shutdown.py  r2_client.py  render.py  utils.py
shared/subnet_common/competition/: audit_matrix.py  audit_requests.py  build_info.py  config.py  generation_audit.py  generation_report.py  generations.py  judge_progress.py  leader.py  match_matrix.py  match_report.py  output_verifications.py  pod_config.py  pod_stats.py  prompts.py  round_result.py  schedule.py  seed.py  source_audit.py  state.py  submissions.py  verification_audit.py
shared/subnet_common/testing/: __init__.py  mock_github.py  mock_r2.py
submission-collector/: README.md  env.template  main.py  pyproject.toml
submission-collector/submission_collector/: collection_iteration.py  discord.py  download.py  prompts.py  r2_client.py  revealed_commitments.py  settings.py  submission.py
submission-collector/tests/: conftest.py  test_collection_iteration.py  test_download.py  test_prompts.py  test_submission.py
weights-setter/: .env.template  README.md  discord.py  main.py  pyproject.toml  requirements.txt  settings.py  setup_env.sh  weights_service.py
weights-setter/tests/: test_weights_service.py
