[tool.poetry]
name = "subnet-common"
version = "0.1.0"
description = "Shared code for 404-GEN subnet"
authors = ["Maxim Bladyko <max@404.xyz>"]
readme = "README.md"
packages = [{ include = "subnet_common" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
httpx = "0.28.1"
loguru = "0.7.3"
pydantic = "2.12.5"
aioboto3 = "^15.5.0"
tenacity = "^9.1.2"
types-aiobotocore-s3 = "^3.1.1"
numpy = "^2.2.1"
pillow = "^11.1.0"
# Producers (generation-orchestrator, submission-collector) install with the
# `embeddings` extra to pull these in. Consumers that only read pre-computed
# `embeddings.npz` via numpy (judge-service) skip them — saves ~2 GB on disk
# and drops a long tail of CUDA transitive deps from their lockfile.
torch = { version = "^2.10.0", optional = true }
torchvision = { version = "^0.25.0", optional = true }
transformers = { version = "^5.0.0", optional = true }

[tool.poetry.extras]
embeddings = ["torch", "torchvision", "transformers"]

[tool.poetry.group.dev.dependencies]
poetry = "2.2.1"
poethepoet = { version = "0.38.0", extras = ["poetry_plugin"] }
bandit = "1.9.2"
black = "25.11.0"
mypy = "1.18.2"
ruff = "0.14.6"
types-requests = "2.32.*"

[build-system]
requires = ["poetry-core", "setuptools", "wheel"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py311']
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.pytest_cache
  | \.idea
  | \.venv
  | \.vscode
)/
'''

[tool.ruff]
target-version = "py311"
cache-dir = ".reports/ruff_cache"
line-length = 120
fix = true
output-format = "full"
include = ["*.py"]
exclude = [".*"]

[tool.ruff.lint]
select = [
    "E", # pycodestyle
    "F", # pyflakes
    "UP", # pyupgrade
    "I", # isort
    "S", # flake8-bandit
    "B", # flake8-bugbear
    "Q", # flake8-quotes
    "ASYNC", # flake8-async
    "PTH", # flake8-use-pathlib
]
ignore = [
    "ASYNC109", # async fn timeout parameter — explicit per-call timeouts are preferred over wrapping every call site in asyncio.timeout()
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.lint.isort]
combine-as-imports = true
lines-after-imports = 2

[tool.bandit]
skips = ["B104"]
exclude_dirs = ["./.*/**"]

[tool.mypy]
cache_dir = ".reports/mypy_cache/"
ignore_missing_imports = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_unused_ignores = false
warn_return_any = true
warn_no_return = false
warn_unreachable = true
strict_equality = true
warn_redundant_casts = true
exclude = ['.venv/.*']

[tool.poe]
poetry_command = ""

[tool.poe.tasks.lint]
help = "Run all linters and formatters"
ignore_fail = "return_non_zero"
sequence = [
    { cmd = "ruff check ." },
    { cmd = "black ." },
    { cmd = "bandit . -rq -c pyproject.toml" },
    { cmd = "mypy ." },
]